--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <ul class="sidebar-menu border-t dark:border-white/10 border-gray-100" data-simplebar style="height: calc(100% - 70px);">
                         <li class=""><h6>Overview</h6></li>
                         <li class="">
-                            <a href="./home.html"><i class="uil uil-home me-2"></i>Home</a>
+                            <a href="./index.html"><i class="uil uil-home me-2"></i>Home</a>
                         </li>
                         <li class="">
                             <a href="./card.html"><i class="uil uil-card-atm me-2"></i>Cards</a>
@@ -246,7 +246,7 @@
                                 </div>
 
                                 <div class="px-5 py-4 bg-gray-50 dark:bg-slate-800">
-                                    <a href="#" class="relative inline-block font-semibold tracking-wide align-middle text-base text-center border-none after:content-[''] after:absolute after:h-px after:w-0 hover:after:w-full after:end-0 hover:after:end-auto after:bottom-0 after:start-0 after:transition-all after:duration-500 text-indigo-600 dark:text-white/70 hover:text-indigo-600 dark:hover:text-white after:bg-indigo-600 dark:after:bg-white duration-500">View Wallets <i class="uil uil-wallet"></i></a>
+                                    <a href="./wallet.html" class="relative inline-block font-semibold tracking-wide align-middle text-base text-center border-none after:content-[''] after:absolute after:h-px after:w-0 hover:after:w-full after:end-0 hover:after:end-auto after:bottom-0 after:start-0 after:transition-all after:duration-500 text-indigo-600 dark:text-white/70 hover:text-indigo-600 dark:hover:text-white after:bg-indigo-600 dark:after:bg-white duration-500">View Wallets <i class="uil uil-wallet"></i></a>
                                 </div>
                             </div><!--end-->
 
@@ -265,7 +265,7 @@
                                 </div>
 
                                 <div class="px-5 py-4 bg-gray-50 dark:bg-slate-800">
-                                    <a href="#" class="relative inline-block font-semibold tracking-wide align-middle text-base text-center border-none after:content-[''] after:absolute after:h-px after:w-0 hover:after:w-full after:end-0 hover:after:end-auto after:bottom-0 after:start-0 after:transition-all after:duration-500 text-indigo-600 dark:text-white/70 hover:text-indigo-600 dark:hover:text-white after:bg-indigo-600 dark:after:bg-white duration-500">Manage Cards <i class="uil uil-arrow-right"></i></a>
+                                    <a href="./card.html" class="relative inline-block font-semibold tracking-wide align-middle text-base text-center border-none after:content-[''] after:absolute after:h-px after:w-0 hover:after:w-full after:end-0 hover:after:end-auto after:bottom-0 after:start-0 after:transition-all after:duration-500 text-indigo-600 dark:text-white/70 hover:text-indigo-600 dark:hover:text-white after:bg-indigo-600 dark:after:bg-white duration-500">Manage Cards <i class="uil uil-arrow-right"></i></a>
                                 </div>
                             </div><!--end-->
 
