--- a/wallet.html
+++ b/wallet.html
@@ -11,7 +11,7 @@
 <body>
     <div class="max-w-7xl mx-auto p-5">
         <div class="bg-white rounded-xl p-8 shadow-md hover:translate-y-[-2px] transition duration-200">
-            <h1 class="text-3xl text-center text-gray-800 mb-8">My Digital Wallet</h1>
+            <h1 class="text-3xl text-center text-gray-800 mb-8">My Wallet</h1>
             <div class="text-4xl font-bold text-green-500 text-center py-5 my-5 bg-gradient-to-r from-gray-50 to-white rounded-lg">
                 Balance: $<span id="balance">0.00</span>
             </div>
