--- a/tickets.html
+++ b/tickets.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concert Tickets</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/tailwind.css">
 </head>
 <body class="bg-gradient-to-br from-gray-100 to-gray-200 min-h-screen">
-    <main class="container mx-auto px-4">
-        <section class="max-w-[800px] mx-auto my-8 p-8 bg-white rounded-[20px] shadow-2xl transform transition-transform hover:-translate-y-1 backdrop-blur-sm bg-opacity-95">
-            <h1 class="text-center text-[#2c3e50] mb-8 text-4xl md:text-5xl font-bold uppercase tracking-[2px] animate-fade-in">Purchase Tickets</h1>
-            <form id="ticketForm" onsubmit="return validateForm()" class="space-y-8">
-                <div class="mb-8 transform transition-all hover:scale-[1.01]">
-                    <h2 class="text-[#2c3e50] mb-4 text-2xl md:text-3xl font-semibold">Select Ticket Type</h2>
-                    <select name="ticketType" id="ticketType" required class="w-full p-4 mb-4 border-2 border-gray-200 rounded-lg text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
+        <section class="max-w-[800px] mx-auto my-4 md:my-8 p-4 md:p-8 bg-white rounded-[20px] shadow-2xl transform transition-transform hover:-translate-y-1 backdrop-blur-sm bg-opacity-95">
+            <h1 class="text-center text-[#2c3e50] mb-6 md:mb-8 text-3xl md:text-5xl font-bold uppercase tracking-[2px] animate-fade-in">Purchase Tickets</h1>
+            <form id="ticketForm" onsubmit="return validateForm()" class="space-y-6 md:space-y-8">
+                <div class="mb-6 md:mb-8 transform transition-all hover:scale-[1.01]">
+                    <h2 class="text-[#2c3e50] mb-3 md:mb-4 text-xl md:text-3xl font-semibold">Select Ticket Type</h2>
+                    <select name="ticketType" id="ticketType" required class="w-full p-3 md:p-4 mb-3 md:mb-4 border-2 border-gray-200 rounded-lg text-sm md:text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
                         <option value="">Choose a ticket type</option>
                         <option value="general">General Admission - $50</option>
                         <option value="vip">VIP Pass - $150</option>
@@ -22,46 +22,44 @@
                     </select>
                 </div>
 
-                <div class="mb-8 transform transition-all hover:scale-[1.01]">
-                    <h2 class="text-[#2c3e50] mb-4 text-2xl md:text-3xl font-semibold">Number of Tickets</h2>
-                    <input type="number" id="quantity" name="quantity" min="1" max="10" required class="w-full p-4 mb-4 border-2 border-gray-200 rounded-lg text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
+                <div class="mb-6 md:mb-8 transform transition-all hover:scale-[1.01]">
+                    <h2 class="text-[#2c3e50] mb-3 md:mb-4 text-xl md:text-3xl font-semibold">Number of Tickets</h2>
+                    <input type="number" id="quantity" name="quantity" min="1" max="10" required class="w-full p-3 md:p-4 mb-3 md:mb-4 border-2 border-gray-200 rounded-lg text-sm md:text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
                 </div>
 
-                <div class="mb-8 transform transition-all hover:scale-[1.01]">
-                    <h2 class="text-[#2c3e50] mb-4 text-2xl md:text-3xl font-semibold">Personal Information</h2>
-                    <div class="grid md:grid-cols-2 gap-4">
-                        <input type="text" id="name" name="name" placeholder="Full Name" required class="w-full p-4 border-2 border-gray-200 rounded-lg text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
-                        <input type="email" id="email" name="email" placeholder="Email Address" required class="w-full p-4 border-2 border-gray-200 rounded-lg text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
+                <div class="mb-6 md:mb-8 transform transition-all hover:scale-[1.01]">
+                    <h2 class="text-[#2c3e50] mb-3 md:mb-4 text-xl md:text-3xl font-semibold">Personal Information</h2>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-3 md:gap-4">
+                        <input type="text" id="name" name="name" placeholder="Full Name" required class="w-full p-3 md:p-4 border-2 border-gray-200 rounded-lg text-sm md:text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
+                        <input type="email" id="email" name="email" placeholder="Email Address" required class="w-full p-3 md:p-4 border-2 border-gray-200 rounded-lg text-sm md:text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
                     </div>
-                    <input type="tel" id="phone" name="phone" placeholder="Phone Number" required class="w-full mt-4 p-4 border-2 border-gray-200 rounded-lg text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
+                    <input type="tel" id="phone" name="phone" placeholder="Phone Number" required class="w-full mt-3 md:mt-4 p-3 md:p-4 border-2 border-gray-200 rounded-lg text-sm md:text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
                 </div>
 
-                <div class="mb-8 transform transition-all hover:scale-[1.01]">
-                    <h2 class="text-[#2c3e50] mb-4 text-2xl md:text-3xl font-semibold">Payment Information</h2>
-                    <div class="space-y-4">
-                        <input type="text" id="cardName" name="cardName" placeholder="Name on Card" required class="w-full p-4 border-2 border-gray-200 rounded-lg text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
-                        <input type="text" id="cardNumber" name="cardNumber" placeholder="Card Number" required class="w-full p-4 border-2 border-gray-200 rounded-lg text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
-                        <div class="grid grid-cols-2 gap-4">
-                            <input type="text" id="expiry" name="expiry" placeholder="MM/YY" required class="w-full p-4 border-2 border-gray-200 rounded-lg text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
-                            <input type="text" id="cvv" name="cvv" placeholder="CVV" required class="w-full p-4 border-2 border-gray-200 rounded-lg text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
+                <div class="mb-6 md:mb-8 transform transition-all hover:scale-[1.01]">
+                    <h2 class="text-[#2c3e50] mb-3 md:mb-4 text-xl md:text-3xl font-semibold">Payment Information</h2>
+                    <div class="space-y-3 md:space-y-4">
+                        <input type="text" id="cardName" name="cardName" placeholder="Name on Card" required class="w-full p-3 md:p-4 border-2 border-gray-200 rounded-lg text-sm md:text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
+                        <input type="text" id="cardNumber" name="cardNumber" placeholder="Card Number" required class="w-full p-3 md:p-4 border-2 border-gray-200 rounded-lg text-sm md:text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
+                        <div class="grid grid-cols-2 gap-3 md:gap-4">
+                            <input type="text" id="expiry" name="expiry" placeholder="MM/YY" required class="w-full p-3 md:p-4 border-2 border-gray-200 rounded-lg text-sm md:text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
+                            <input type="text" id="cvv" name="cvv" placeholder="CVV" required class="w-full p-3 md:p-4 border-2 border-gray-200 rounded-lg text-sm md:text-base transition-all duration-300 focus:border-blue-500 focus:shadow-lg focus:outline-none focus:-translate-y-0.5 bg-gray-50 hover:bg-white">
                         </div>
                     </div>
                 </div>
 
-                <div class="text-center text-xl my-8 p-6 bg-gradient-to-r from-gray-50 to-gray-100 rounded-lg text-[#2c3e50] shadow-md transform transition-all hover:scale-[1.02]">
+                <div class="text-center text-lg md:text-xl my-6 md:my-8 p-4 md:p-6 bg-gradient-to-r from-gray-50 to-gray-100 rounded-lg text-[#2c3e50] shadow-md transform transition-all hover:scale-[1.02]">
                     <h2 class="font-bold">Total: $<span id="totalAmount" class="text-green-600">0</span></h2>
                 </div>
 
-                <button type="submit" class="w-full py-5 bg-gradient-to-r from-green-500 to-green-600 text-white rounded-lg text-lg font-bold cursor-pointer transition-all duration-300 hover:from-green-600 hover:to-green-500 hover:-translate-y-1 hover:shadow-xl uppercase tracking-wider transform hover:scale-[1.02]">Purchase Tickets</button>
+                <button type="submit" class="w-full py-4 md:py-5 bg-gradient-to-r from-green-500 to-green-600 text-white rounded-lg text-base md:text-lg font-bold cursor-pointer transition-all duration-300 hover:from-green-600 hover:to-green-500 hover:-translate-y-1 hover:shadow-xl uppercase tracking-wider transform hover:scale-[1.02]">Purchase Tickets</button>
             </form>
         </section>
-    </main>
 
-    <footer class="bg-gradient-to-r from-[#2c3e50] to-[#3498db] text-white text-center py-6 mt-12 w-full shadow-[0_-2px_10px_rgba(0,0,0,0.1)]">
-        <p class="text-sm md:text-base">© 2024 Payhive Solution LLC. All rights reserved.</p>
+    <footer class="bg-gradient-to-r from-[#2c3e50] to-[#3498db] text-white text-center py-4 md:py-6 mt-8 md:mt-12 w-full shadow-[0_-2px_10px_rgba(0,0,0,0.1)]">
+        <p class="text-xs md:text-base">© 2024 Payhive Solution LLC. All rights reserved.</p>
     </footer>
 </body>
-
     <script>
         function calculateTotal() {
             const ticketType = document.getElementById('ticketType').value;
