--- a/index.html
+++ b/index.html
@@ -22,18 +22,7 @@
     </head>
     
     <body class="font-nunito text-base text-black dark:text-white dark:bg-slate-900">
-        <!-- Loader Start -->
-        <!-- <div id="preloader">
-            <div id="status">
-                <div class="spinner">
-                    <div class="double-bounce1"></div>
-                    <div class="double-bounce2"></div>
-                </div>
-            </div>
-        </div> -->
-        <!-- Loader End -->
-
-
+       
         <div class="page-wrapper toggled">
             <!-- sidebar-wrapper -->
             <nav id="sidebar" class="sidebar-wrapper">
@@ -129,7 +118,7 @@
                             <!-- show or close sidebar -->
                         </div>
 
-                        <ul class="list-none mb-0 space-x-1">
+                        <ul class="list-none mb-0 flex items-center space-x-1">
                             <!-- Notification Dropdown -->
                             <li class="dropdown inline-block relative">
                                 <button onclick="toggleDropdown(this)" class="dropdown-toggle h-8 w-8 inline-flex items-center justify-center tracking-wide align-middle duration-500 text-[20px] text-center bg-gray-50 dark:bg-slate-800 hover:bg-gray-100 dark:hover:bg-slate-700 border border-gray-100 dark:border-gray-800 text-slate-900 dark:text-white rounded-full" type="button">
