--- a/send.html
+++ b/send.html
@@ -192,7 +192,7 @@
                 <!-- Top Header -->
 
                 <div class="container-fluid relative px-3 py-12">
-                    <div class="max-w-xl mx-auto mt-12 p-8 shadow-lg rounded-2xl bg-white dark:bg-slate-900 transform transition-all duration-300 hover:shadow-xl mt-10 h-screen">
+                    <div class="max-w-xl mx-auto mt-12 p-8 shadow-lg rounded-2xl bg-white dark:bg-slate-900 transform transition-all duration-300 hover:shadow-xl mt-10">
                         <h2 class="text-3xl font-semibold text-gray-800 dark:text-white mb-8 text-center">Send Money</h2>
                         <form id="sendMoneyForm" class="space-y-6">
                             <div class="transition-all duration-300 transform hover:-translate-y-1">
