--- a/exchange.html
+++ b/exchange.html
@@ -165,6 +165,7 @@
                                         <option value="NGN">Nigerian Naira (NGN)</option>
                                     </select>
                                 </div>
+                                <div class="text-sm text-gray-600 dark:text-gray-400 mt-2" id="currentRate"></div>
                                 <button type="submit" class="w-full py-3 px-4 bg-blue-600 text-white font-medium rounded-lg transition-all duration-300 transform hover:-translate-y-0.5 hover:bg-blue-500 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
                                     Convert Currency
                                 </button>
@@ -187,18 +188,7 @@
         </div>
         <!-- page-wrapper -->
 
-        <!-- Switcher -->
-        <div class="fixed top-[30%] -end-3 z-50">
-            <span class="relative inline-block rotate-90">
-                <input type="checkbox" class="checkbox opacity-0 absolute" id="chk" />
-                <label class="label bg-slate-900 dark:bg-white shadow dark:shadow-gray-700 cursor-pointer rounded-full flex justify-between items-center p-1 w-14 h-8" for="chk">
-                    <i class="uil uil-moon text-[20px] text-yellow-500"></i>
-                    <i class="uil uil-sun text-[20px] text-yellow-500"></i>
-                    <span class="ball bg-white dark:bg-slate-900 rounded-full absolute top-[2px] left-[2px] size-7"></span>
-                </label>
-            </span>
-        </div>
-        <!-- Switcher -->
+       
 
         <!-- JAVASCRIPTS -->
         <script src="./exchange.js"></script>
