--- a/send.html
+++ b/send.html
@@ -197,11 +197,8 @@
                         <form id="sendMoneyForm" class="space-y-6">
                             <div class="transition-all duration-300 transform hover:-translate-y-1">
                                 <label for="recipient" class="block font-medium text-gray-700 dark:text-gray-200 mb-2">Recipient Email</label>
-                                <input type="email" class="w-full px-4 py-3 rounded-lg border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all duration-300 dark:bg-slate-800 dark:text-white" id="recipient" required placeholder="Enter recipient's email">
-                            </div>
-                            <div class="transition-all duration-300 transform hover:-translate-y-1">
-                                <label for="accountNumber" class="block font-medium text-gray-700 dark:text-gray-200 mb-2">Account Number</label>
-                                <input type="text" class="w-full px-4 py-3 rounded-lg border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all duration-300 dark:bg-slate-800 dark:text-white" id="accountNumber" required placeholder="Enter recipient's account number">
+                                <input type="email" class="w-full px-4 py-3 rounded-lg border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all duration-300 dark:bg-slate-800 dark:text-white" id="recipient" required placeholder="Enter recipient's PayHive email">
+
                             </div>
                             <div class="transition-all duration-300 transform hover:-translate-y-1">
                                 <label for="amount" class="block font-medium text-gray-700 dark:text-gray-200 mb-2">Amount</label>
