--- a/withdraw.html
+++ b/withdraw.html
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="container-fluid px-3 py-6">
-                    <div class="max-w-4xl mx-auto mt-8 h-screen">
+                    <div class="max-w-4xl mx-auto mt-2 h-screen">
                         <div class="bg-white dark:bg-slate-900 rounded-xl shadow-lg overflow-hidden transform hover:scale-[1.02] transition-all ">
                             <div class="bg-gradient-to-r from-blue-600 to-blue-700 text-white p-6 rounded-t-xl">
                                 <h3 class="text-center text-2xl text-black font-bold">Withdraw Money</h3>
@@ -147,6 +147,20 @@
                                         <div class="relative rounded-md shadow-sm">
                                             <input type="number" class="block w-full pl-7 pr-12 py-3 border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all" id="amount" required min="1" placeholder="Enter amount">
                                         </div>
+                                    </div>
+                                    <div>
+                                        <label for="bankAccount" class="block text-sm font-medium mb-2">Bank Account</label>
+                                        <select id="bankAccount" class="block w-full pl-3 pr-10 py-3 border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all" required>
+                                            <option value="">Select your bank</option>
+                                            <option value="chase">Access Bank</option>
+                                            <option value="boa">Stanbic ibtc</option>
+                                            <option value="wells">GTB Bank</option>
+                                            <option value="citi">Zenith Bank</option>
+                                        </select>
+                                    </div>
+                                    <div>
+                                        <label for="accountNumber" class="block text-sm font-medium mb-2">Account Number</label>
+                                        <input type="text" id="accountNumber" class="block w-full pl-3 pr-10 py-3 border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all" required pattern="[0-9]{8,17}" placeholder="Enter account number">
                                     </div>
                                     <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-4 rounded-lg text-lg transition-all transform hover:translate-y-[-2px]">
                                         Withdraw
